# rosa

./: .ghci  .travis.yml  CHANGELOG.md  LICENSE  Main.hs  README.md  default.nix  flake.nix  rosa.cabal  shell.nix
exe/: Main.hs
src/Language/Rosa/: Ast.hs  Core.hs  Error.hs  Monad.hs  Parser.hs  SourceFile.hs
src/Language/Rosa/Ast/: Decl.hs  Definitions.hs  Expr.hs  ImportDecl.hs  Module.hs  Operator.hs  Pattern.hs  Pattern.hs-boot  Span.hs  Statement.hs  Value.hs
src/Language/Rosa/Ast/Definitions/: VarDefinition.hs
src/Language/Rosa/Core/: Annotation.hs  Fix.hs  InputSource.hs  ModulePath.hs  SourceFile.hs  SourceSpan.hs
src/Language/Rosa/Data/: ModulePath.hs  Position.hs  SourceSpan.hs
src/Language/Rosa/Frontend/: AST.hs  Lexer.x  Parser.y
src/Language/Rosa/Parser/: Annotations.hs  Errors.hs  Lexer.x  Literal.hs  Monad.hs  NumericParser.hs  Parser.y  Token.hs
src/Language/Rosa/Syntax/: AST.hs  Operators.hs  Stages.hs
src/Rosa/: AST.hs  CodeGen.hs  Codegen.hs  Compiler.hs  Lexer.x  Parser.y  PrettyPrinter.hs
src/Rosa/Codegen/: Frame.hs
src/Rosa/Frontend/: AST.hs  Lexer.x  Parser.y  PrettyPrinter.hs
test/Language/Rosa/: ParserTest.hs
test/Language/Rosa/Frontend/: ParserAcceptanceTest.hs
test/Language/Rosa/Parser/: LexerSpec.hs  LiteralSpec.hs  ParserAstGolden.hs  ParserSpec.hs
test/Rosa/: ParserAndPrettyPrinterTest.hs  ParserSpec.hs  PrettyPrinterSpec.hs
test/Rosa/Frontend/: LiteralParserTest.hs  ParserAcceptanceTest.hs  ParserAndPrettyPrinterTest.hs
test/Rosa/Parser/: Gen.hs
test/golden/parser/: decl-001.rosa  decl-002.rosa  decl-003.rosa  decl-004.rosa  decl-005.rosa  decl-006.rosa  empty-002.rosa  expr-001.rosa  expr-002.rosa  expr-003.rosa  expr-004.rosa  expr-005.rosa  expr-006.rosa  import.rosa  import.rosa.ast  pair.rosa  pattern-001.rosa  pattern-002.rosa  pattern-003.rosa  pattern-004.rosa  pattern-005.rosa  pattern-006.rosa  pattern-006.rosa.out  pattern-007.rosa  use-001.rosa
tests/: btldwosp.c  dzondczk.c  ecjlkevc.c  enjqmlho.c  fglnfnxc.c  fhvbevqu.c  fyikhpak.c  ihdelqig.c  ikjyshgw.c  isrxvzir.c  jpejgnxc.c  kkgsvdyy.c  lhvmqfpj.c  mrtvyrkp.c  mxptuztj.c  ofqpmhqb.c  othnpucg.c  ovnfmwuv.c  qgynsxke.c  ralwfmpa.c  rciowgcu.c  rtesruzp.c  run_tests.sh  thslsbiv.c  umgnlful.c  xdnecxob.c  ycyuvpsp.c  yumjapwo.c  zkrcwezf.c  znvgftiv.c  zybaedmp.c
