cabal-version:          3.0
name:                   rosa
version:                0.1.0.0
-- synopsis:
-- description:
license:                MIT
license-file:           LICENSE
author:                 Jonáš Malena
maintainer:             jonas.malena@gmail.com
-- copyright:
build-type:             Simple
extra-doc-files:        CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options:        -Wall

library
    import:             warnings
    exposed-modules:    Language.Rosa.Syntax.AST
    other-modules:      Language.Rosa.Syntax.Operators
                        Language.Rosa.Syntax.Stages
                        Language.Rosa.Parser.Lexer
                        Language.Rosa.Parser.Parser
    -- other-extensions:
    build-depends:      array >=0.5 && <0.6,
                        base >=4.9 && <5,
                        containers >=0.6 && <0.7,
                        mtl >=2.3 && <2.4,
    build-tool-depends: alex:alex >=3.5 && <3.6,
                        happy:happy >=2.0 && <2.1
    hs-source-dirs:     src
    default-language:   Haskell2010

executable rosa
    import:             warnings
    main-is:            Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:      base >=4.9 && <5,
                        optparse-applicative >=0.18 && <0.19,
                        process >=1.6 && <1.7,
                        rosa
    hs-source-dirs:     exe
    default-language:   Haskell2010

test-suite rosa-test
    import:             warnings
    default-language:   Haskell2010
    other-modules:      Language.Rosa.Frontend.ParserAcceptanceTest
    -- other-extensions:
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Driver.hs
    build-depends:      base >=4.9 && <5,
                        tasty >=1.5 && <1.6,
                        tasty-hunit >=0.10 && <0.11,
                        string-qq >=0.0 && <0.1,
                        rosa
    build-tool-depends: tasty-discover:tasty-discover >=5.1 && <5.2
