cabal-version:          3.0
name:                   rosa
version:                0.1.0.0
-- synopsis:
-- description:
license:                MIT
license-file:           LICENSE
author:                 Jonáš Malena
maintainer:             jonas.malena@gmail.com
-- copyright:
build-type:             Simple
extra-doc-files:        CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options:        -Wall

library
    import:             warnings
    exposed-modules:    Language.Rosa.Ast
                        -- Language.Rosa.Compiler
                        Language.Rosa.Error
                        Language.Rosa.Parser
                        Language.Rosa.SourceFile
    other-modules:      Language.Rosa.Ast.Definitions.VarDefinition
                        Language.Rosa.Ast.Definitions
                        Language.Rosa.Ast.Expr
                        Language.Rosa.Ast.Operator
                        Language.Rosa.Ast.Span
                        Language.Rosa.Ast.Statement
                        Language.Rosa.Ast.Value
                        -- Language.Rosa.Compiler.Monad
                        Language.Rosa.Parser.Errors
                        Language.Rosa.Parser.Lexer
                        Language.Rosa.Parser.Monad
                        Language.Rosa.Parser.NumericParser
                        Language.Rosa.Parser.Parser
                        Language.Rosa.Parser.Token

    -- other-extensions:
    build-depends:      array >=0.5 && <0.6,
                        base >=4.9 && <5,
                        bytestring >=0.12 && <0.13,
                        filepath >=1.5 && <1.6,
                        mtl >=2.3 && <2.4
    build-tool-depends: alex:alex >=3.5 && <3.6,
                        happy:happy >=2.0 && <2.1
    hs-source-dirs:     src
    default-language:   Haskell2010

executable rosa
    import:             warnings
    main-is:            Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:      base >=4.9 && <5,
                        optparse-applicative >=0.18 && <0.19,
                        process >=1.6 && <1.7,
                        rosa
    hs-source-dirs:     exe
    default-language:   Haskell2010

test-suite rosa-test
    import:             warnings
    default-language:   Haskell2010
    other-modules:      Language.Rosa.Parser.LexerSpec
    -- other-extensions:
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Spec.hs
    build-depends:      base >=4.9 && <5,
                        bytestring >=0.12 && <0.13,
                        hspec >=2.11 && <2.12,
                        rosa
