cabal-version:          3.0
name:                   rosa
version:                0.1.0.0
-- synopsis:
-- description:
license:                MIT
license-file:           LICENSE
author:                 Jonáš Malena
maintainer:             jonas.malena@gmail.com
-- copyright:
build-type:             Simple
extra-doc-files:        CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options:        -Wall

library
    import:             warnings
    exposed-modules:    Language.Rosa.Ast
                        Language.Rosa.Core
                        -- Language.Rosa.Compiler
                        Language.Rosa.Error
                        Language.Rosa.Monad
                        Language.Rosa.Parser
    other-modules:      Language.Rosa.Ast.Definitions.VarDefinition
                        Language.Rosa.Ast.Definitions
                        Language.Rosa.Ast.Decl
                        Language.Rosa.Ast.Expr
                        Language.Rosa.Ast.ImportDecl
                        Language.Rosa.Ast.Module
                        Language.Rosa.Ast.Value
                        Language.Rosa.Core.ModulePath
                        Language.Rosa.Core.SourceFile
                        Language.Rosa.Core.SourceSpan
                        -- Language.Rosa.Compiler.Monad
                        Language.Rosa.Parser.Errors
                        Language.Rosa.Parser.Lexer
                        Language.Rosa.Parser.Literal
                        Language.Rosa.Parser.Monad
                        Language.Rosa.Parser.Parser
                        Language.Rosa.Parser.Token

    -- other-extensions:
    build-depends:      array >=0.5 && <0.6,
                        base >=4.9 && <5,
                        bytestring >=0.12 && <0.13,
                        filepath >=1.5 && <1.6,
                        mtl >=2.3 && <2.4
    build-tool-depends: alex:alex >=3.5 && <3.6,
                        happy:happy >=2.0 && <2.1
    hs-source-dirs:     src
    default-language:   Haskell2010

executable rosa
    import:             warnings
    main-is:            Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:      base >=4.9 && <5,
                        optparse-applicative >=0.18 && <0.19,
                        process >=1.6 && <1.7,
                        rosa
    hs-source-dirs:     exe
    default-language:   Haskell2010

test-suite rosa-test
    import:             warnings
    default-language:   Haskell2010
    other-modules:      Language.Rosa.Parser.LexerSpec
                        Language.Rosa.Parser.LiteralSpec
                        Language.Rosa.Parser.ParserSpec
    -- other-extensions:
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Driver.hs
    build-depends:      base >=4.9 && <5,
                        bytestring >=0.12 && <0.13,
                        filepath >=1.5 && <1.6,
                        tasty >=1.5 && <1.6,
                        tasty-discover >=5.1 && <5.2,
                        tasty-golden >=2.3 && <2.4,
                        tasty-hunit >=0.10 && <0.11,
                        rosa
